--- a/plugins/dynamix/Browse.page
+++ b/plugins/dynamix/Browse.page
@@ -1,5 +1,6 @@
 Title="Index of $dir"
 Tag="navicon"
+Markdown="false"
 ---
 <?PHP
 /* Copyright 2005-2017, Lime Technology
@@ -31,7 +32,7 @@ $(function(){
 });
 </script>
 <table class="indexer tablesorter">
- <thead><tr><th>Type</th><th>Name</th><th>Size</th><th>Last Modified</th><th>Location</th></tr></thead>
+ <thead><tr><th>Type</th><th class='sorter-text'>Name</th><th>Size</th><th>Last Modified</th><th>Location</th></tr></thead>
  <tbody><tr><td colspan="5" style="text-align:center;padding-top:12px"><i class='fa fa-spinner fa-spin icon'></i><em>Please wait, loading information ...</em></td></tr></tbody>
 </table>
 <input type="button" value="Done" onclick="done('Browse')">
