Corrected PHP warnings

--- a/plugins/dynamix/ShareList.page
+++ b/plugins/dynamix/ShareList.page
@@ -1,7 +1,7 @@
 Menu="Shares:1"
 Title="User Shares"
 Tag="user-circle"
-Cond="$var['fsState']!="Stopped" && $var['shareUser']=='e'"
+Cond="$var['fsState']!='Stopped' && $var['shareUser']=='e'"
 ---
 <?PHP
 /* Copyright 2005-2017, Lime Technology
