--- a/plugins/dynamix/DiskList.page
+++ b/plugins/dynamix/DiskList.page
@@ -1,7 +1,7 @@
 Menu="Shares:2"
 Title="Disk Shares"
 Tag="user-circle-o"
-Cond="$var['fsState']!="Stopped" && $var['shareDisk']!='no'"
+Cond="$var['fsState']!='Stopped' && $var['shareDisk']!='no'"
 ---
 <?PHP
 /* Copyright 2005-2017, Lime Technology
