--- a/plugins/dynamix/DashboardApps.page
+++ b/plugins/dynamix/DashboardApps.page
@@ -39,132 +39,37 @@ div.Panel:hover{overflow:visible;z-index:10;background-color:unset;}
 <div id="dialog-confirm" style="display:none;" title="Dialog Title"></div>
 <div id="iframe-popup" style="display:none;-webkit-overflow-scrolling:touch;"></div>
 <span class="status" style="margin-top:-44px; margin-right:<?= ($display['refresh']==0 || ($display['refresh']<0 && $var['mdResync']>0)) ? '60' : '0' ?>px"><input type="checkbox" class="appview"></span>
-<div id="apps_icons" style="display:none">
-<?
-$allContainers = [];
-if ((pgrep('dockerd')!==false) && (empty($display['dashapps']) || $display['dashapps'] == 'icons' || $display['dashapps'] == 'docker')) {
-	require_once "$docroot/plugins/dynamix.docker.manager/include/DockerClient.php";
-	$DockerClient    = new DockerClient();
-	$DockerUpdate    = new DockerUpdate();
-	$DockerTemplates = new DockerTemplates();
+<div id="apps_icons" style="display:none"></div><div id="noapps">No apps available to show</div>
 
-	$allContainers = $DockerClient->getDockerContainers();
-	if ( ! $allContainers) { $allContainers = []; }
-
-	$arrDockerInfo = $DockerTemplates->getAllInfo();
-}
-
-$allVMs = [];
-if ((pgrep('libvirtd')!==false) && (empty($display['dashapps']) || $display['dashapps'] == 'icons' || $display['dashapps'] == 'vms')) {
-	require_once "$docroot/plugins/dynamix.vm.manager/classes/libvirt_helpers.php";
-
-	$doms = $lv->get_domains();
-	if (is_array($doms)) {
-		sort($doms);
-		$allVMs = $doms;
-	}
-}
-
-$contextMenus = [];
-
-// Docker Apps
-foreach ($allContainers as $ct) {
-	$name           = $ct["Name"];
-	$info 			= $arrDockerInfo[$name];
-	$is_autostart   = ( $info['autostart'] ) ? 'true' : 'false';
-	$updateStatus   = $info['updated'];
-	$updateStatus   = ($updateStatus == "true" or $updateStatus == "undef" ) ? 'true' : 'false';
-	$running        = ($ct['Running']) ? 'true' : 'false';
-	$webGuiUrl      = $info['url'];
-	$contextMenus[] = sprintf("addDockerContainerContext('%s', '%s', '%s', %s, %s, %s, '%s', '%s', '%s', '%s');", addslashes($ct['Name']), addslashes($ct['ImageId']), addslashes($info['template']), $running, $updateStatus, $is_autostart, addslashes(html_entity_decode($webGuiUrl)), $ct["Id"], addslashes(html_entity_decode($info["Support"])),addslashes(html_entity_decode($info["Project"])) );
-	$shape          = ($ct["Running"]) ? "play" : "square";
-	$status         = ($ct["Running"]) ? "started" : "stopped";
-
-	$Icon           = $info['icon'];
-	if (!$Icon) {
-		$Icon = "/plugins/dynamix.docker.manager/images/question.png";
-	}
-
-	print "
-		<div class=\"Panel $status\">
-			<div id='context-" . htmlspecialchars($name) . "' style='display:block; cursor:pointer'>
-				<div style=\"position:relative; width:48px; height:48px; margin:0px auto;\">
-					<img src=\"" . $Icon . "\" class=\"$status\" style=\"position:absolute; z-index:1; top:0; bottom:0; left:0; right:0; width:48px; height:48px;\"/>
-					<i class=\"fa iconstatus fa-$shape $status\" title='$status'></i>
-				</div>
-				<div class=\"PanelText\">
-					<span class=\"PanelText " . (($updateStatus == "false") ? "update" : $status) . "\">" . $name . "</span>
-				</div>
-			</div>
-		</div>";
-}
-
-// VM Apps
-foreach ($allVMs as $name) {
-	$res = $lv->get_domain_by_name($name);
-	$uuid = libvirt_domain_get_uuid_string($res);
-	$dom = $lv->domain_get_info($res);
-	$id = $lv->domain_get_id($res);
-	$state = $lv->domain_state_translate($dom['state']);
-	$vncport = $lv->domain_get_vnc_port($res);
-	$vnc = '';
-	if ($vncport > 0) {
-		$wsport = $lv->domain_get_ws_port($res);
-		$vnc = '/plugins/dynamix.vm.manager/vnc.html?autoconnect=true&host=' . $_SERVER['HTTP_HOST'] . '&port=&path=/wsproxy/' . $wsport . '/';
-	} else {
-		$vncport = ($vncport < 0) ? "auto" : "";
-	}
-
-    $template = $lv->_get_single_xpath_result($res, '//domain/metadata/*[local-name()=\'vmtemplate\']/@name');
-    if (empty($template)) {
-      $template = 'Custom';
-    }
-
-	$log = (is_file('/var/log/libvirt/qemu/' . $name . '.log') ? 'libvirt/qemu/' . $name . '.log' : '');
-
-	$contextMenus[] = sprintf("addVMContext('%s', '%s', '%s', '%s', '%s', '%s');", addslashes($name), addslashes($uuid), addslashes($template), $state, addslashes($vnc), addslashes($log));
-
-	$vmicon = $lv->domain_get_icon_url($res);
-
-	echo renderVMContentIcon($uuid, $name, $vmicon, $state);
-}
-
-?>
-<div id="noapps">No apps available to show</div>
-</div>
 <script src="<?autov('/webGui/javascript/jquery.switchbutton.js')?>"></script>
 <script src="<?autov('/plugins/dynamix.docker.manager/javascript/docker.js')?>"></script>
 <script src="<?autov('/plugins/dynamix.vm.manager/javascript/vmmanager.js')?>"></script>
 <script>
+function loadlist() {
+  $.get('/webGui/include/DashboardApps.php',function(d) {
+    var data = d.split(/\0/);
+    $('#apps_icons').html(data[0]);
+    $('head').append('<script>'+data[1]+'<\/script>');
+    if ($.cookie('dashapps_view_mode')=='startedonly') {
+      $('.Panel').not('.started').hide();
+      if ($('.Panel.started').length===0) $('#noapps').show();
+    }
+    if ($('.Panel').length===0) $('#noapps').show();
+    $('#apps_icons').fadeIn('slow');
+    context.init({preventDoubleContext:false});
+  });
+}
 $(function() {
-	if ($.cookie('dashapps_view_mode') == 'startedonly') {
-		$('.Panel').not('.started').hide();
-		if ($('.Panel.started').length === 0) {
-			$('#noapps').show();
-		}
-	}
-	if ($('.Panel').length === 0) {
-		$('#noapps').show();
-	}
-	$('#apps_icons').fadeIn('slow');
-
-	$('.appview').switchButton({
-		labels_placement: "left",
-		on_label: 'Started Only',
-		off_label: 'All Apps',
-		checked: $.cookie('dashapps_view_mode') == 'startedonly'
-	});
-	$('.appview').change(function () {
-		$('.Panel').not('.started').finish().toggle('fast');
-		if ($('.Panel').length === 0 || ($('.appview').is(':checked') && $('.Panel.started').length === 0)) {
-			$('#noapps').fadeIn('fast');
-		} else {
-			$('#noapps').fadeOut('fast');
-		}
-		$.cookie('dashapps_view_mode', $('.appview').is(':checked') ? 'startedonly' : 'allapps', { expires: 3650 });
-	});
-
-	context.init({ preventDoubleContext: false });
-	<?=implode("\n\t", $contextMenus)?>
+  $('.appview').switchButton({labels_placement:"left", on_label:'Started Only', off_label:'All Apps', checked:$.cookie('dashapps_view_mode') == 'startedonly'});
+  $('.appview').change(function() {
+    $('.Panel').not('.started').finish().toggle('fast');
+    if ($('.Panel').length===0 || ($('.appview').is(':checked') && $('.Panel.started').length===0)) {
+      $('#noapps').fadeIn('fast');
+    } else {
+      $('#noapps').fadeOut('fast');
+    }
+    $.cookie('dashapps_view_mode',$('.appview').is(':checked') ? 'startedonly':'allapps',{expires:3650});
+  });
+  loadlist();
 });
 </script>
