Standardize VM folder structure (step 1)
Moved the PHP files to the subfolder 'classes' together with all other
PHP files

--- a/plugins/dynamix.vm.manager/AddVM.page
+++ b/plugins/dynamix.vm.manager/AddVM.page
@@ -15,7 +15,6 @@ Markdown="false"
  * all copies or substantial portions of the Software.
  */
 ?>
-
 <?
-require_once "$docroot/plugins/dynamix.vm.manager/VMedit.php";
+require_once "$docroot/plugins/dynamix.vm.manager/classes/VMedit.php";
 ?>
