--- a/plugins/dynamix.vm.manager/UpdateVM.page
+++ b/plugins/dynamix.vm.manager/UpdateVM.page
@@ -15,7 +15,6 @@ Markdown="false"
  * all copies or substantial portions of the Software.
  */
 ?>
-
 <?
-require_once "$docroot/plugins/dynamix.vm.manager/VMedit.php";
+require_once "$docroot/plugins/dynamix.vm.manager/classes/VMedit.php";
 ?>
