Standardize VM folder structure (step 2)
Rename folder "classes" to "include"

--- a/plugins/dynamix.vm.manager/AddVM.page
+++ b/plugins/dynamix.vm.manager/AddVM.page
@@ -16,5 +16,5 @@ Markdown="false"
  */
 ?>
 <?
-require_once "$docroot/plugins/dynamix.vm.manager/classes/VMedit.php";
+require_once "$docroot/plugins/dynamix.vm.manager/include/VMedit.php";
 ?>
