--- a/plugins/dynamix.plugin.manager/Plugins.page
+++ b/plugins/dynamix.plugin.manager/Plugins.page
@@ -18,14 +18,13 @@ Code="f1e6"
  */
 ?>
 <?
-$empty = "<tr><td colspan='6' style='text-align:center;padding-top:12px'><i class='fa fa-spinner fa-spin icon'></i><em>Please wait, retrieving and updating plugin information ...</em></td><tr>";
 // Remove stale /tmp/plugin/*.plg entries
 foreach (glob("/tmp/plugins/*.{plg,txt}", GLOB_NOSORT+GLOB_BRACE) as $entry) if (!file_exists("/var/log/plugins/".basename($entry))) @unlink($entry);
 ?>
 <link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.filetree.css">
 <style>#plugin_tree{width:33%;height:200px;overflow-y:scroll;}</style>
 
-<script src="/webGui/javascript/jquery.filetree.js"></script>
+<script src="<?autov('/webGui/javascript/jquery.filetree.js')?>"></script>
 <script>
 <?if ($display['resize']):?>
 function resize(bind) {
@@ -72,5 +71,5 @@ $(function() {
 </script>
 <table class='tablesorter plugins shift' id='plugin_table'>
 <thead><tr><th></th><th>Plugin</th><th>Author</th><th>Version</th><th>Status</th><th>Uninstall</th></tr></thead>
-<tbody id="plugin_list"><?=$empty?></tbody>
+<tbody id="plugin_list"><tr><td colspan='6' style='text-align:center;padding-top:12px'><i class='fa fa-spinner fa-spin icon'></i><em>Please wait, retrieving and updating plugin information ...</em></td><tr></tbody>
 </table>
