update app icons container slidedown speed
ain't nobody got time for that

--- a/plugins/dynamix/DashboardApps.page
+++ b/plugins/dynamix/DashboardApps.page
@@ -55,7 +55,7 @@ function loadlist() {
       if ($('.Panel.started').length===0) $('#noapps').show();
     }
     if ($('.Panel').length===0) $('#noapps').show();
-    $('#apps_icons').slideDown('slow');
+    $('#apps_icons').slideDown('fast');
     context.init({preventDoubleContext:false});
   });
 }
